fixed stretching images on chrome, safari etc.

--- a/css/footer.css
+++ b/css/footer.css
@@ -17,7 +17,8 @@ footer h5,footer p {
 
 #socialMedia img {
     height: 30px;
-    width: 100%;
+    max-width: 100%;
+    overflow: hidden; 
 }
 
 #socialMedia a {
